Add plume-util.jar to classpath

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -85,6 +85,7 @@
       -->
       <pathelement location="${annotations-compiler}/dist/lib/javac.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/options-all-0.3.1.jar"/>
+      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/plume-util-0.0.1.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/plume-core.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/guava-20.0.jar"/>
       <pathelement location="${scene-lib}/bin"/>
@@ -159,6 +160,7 @@
       </uptodate>
       <uptodate property="annotations-compiler.uptodate" targetfile="annotation-file-utilities.jar" srcfile="${annotations-compiler}/dist/lib/javac.jar"/>
       <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/options-all-0.3.1.jar"/>
+      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/plume-util-0.0.1.jar"/>
       <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/plume-core.jar"/>
       <uptodate property="google-collect.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/guava-20.0.jar"/>
 
@@ -200,6 +202,12 @@
     </copy>
     <!-- Also need to get class files in libraries -->
     <unjar src="lib/options-all-0.3.1.jar" dest="${temp-jarfile}">
+      <patternset>
+        <include name="**/*.class"/>
+        <exclude name="META-INF/" />
+      </patternset>
+    </unjar>
+    <unjar src="lib/plume-util-0.0.1.jar" dest="${temp-jarfile}">
       <patternset>
         <include name="**/*.class"/>
         <exclude name="META-INF/" />
