--- a/annotation-file-utilities/.classpath
+++ b/annotation-file-utilities/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="lib" path="lib/guava-20.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/options-all-0.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/plume-util-0.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/plume-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
