--- a/.gitignore
+++ b/.gitignore
@@ -24,29 +24,32 @@ annotation-file-utilities/design.pdf
 
 annotation-file-utilities/javadoc
 
-annotation-file-utilities/tests/abbreviated/*.diff
-annotation-file-utilities/tests/abbreviated/*.log
-annotation-file-utilities/tests/abbreviated/*.output
-annotation-file-utilities/tests/enum-imports/*.diff
-annotation-file-utilities/tests/enum-imports/*.log
-annotation-file-utilities/tests/enum-imports/*.output
-annotation-file-utilities/tests/ad-hoc/bridge/A.class
-annotation-file-utilities/tests/ad-hoc/bridge/C.class
-annotation-file-utilities/tests/ad-hoc/bridge/C.jaif
-annotation-file-utilities/tests/source-extension/*.diff
-annotation-file-utilities/tests/source-extension/*.log
-annotation-file-utilities/tests/source-extension/*.output
-annotation-file-utilities/tests/Makefile.user
-annotation-file-utilities/tests/system-test/out1
-annotation-file-utilities/tests/system-test/out3
-annotation-file-utilities/tests/system-test/out4.class
-annotation-file-utilities/tests/system-test/out2.diff
-annotation-file-utilities/tests/system-test/out2.jaif
-annotation-file-utilities/tests/system-test/out5.diff
-annotation-file-utilities/tests/system-test/out5.jaif
 annotation-file-utilities/tests/*.diff
 annotation-file-utilities/tests/*.log
 annotation-file-utilities/tests/*.output
+annotation-file-utilities/tests/Makefile.user
+annotation-file-utilities/tests/abbreviated/*.diff
+annotation-file-utilities/tests/abbreviated/*.log
+annotation-file-utilities/tests/abbreviated/*.output
+annotation-file-utilities/tests/ad-hoc/bridge/A.class
+annotation-file-utilities/tests/ad-hoc/bridge/C.class
+annotation-file-utilities/tests/ad-hoc/bridge/C.jaif
+annotation-file-utilities/tests/enum-imports/*.diff
+annotation-file-utilities/tests/enum-imports/*.log
+annotation-file-utilities/tests/enum-imports/*.output
+annotation-file-utilities/tests/issue155/Issue155.diff
+annotation-file-utilities/tests/issue155/Issue155.log
+annotation-file-utilities/tests/issue155/Issue155.output
+annotation-file-utilities/tests/source-extension/*.diff
+annotation-file-utilities/tests/source-extension/*.log
+annotation-file-utilities/tests/source-extension/*.output
+annotation-file-utilities/tests/system-test/out1
+annotation-file-utilities/tests/system-test/out2.diff
+annotation-file-utilities/tests/system-test/out2.jaif
+annotation-file-utilities/tests/system-test/out3
+annotation-file-utilities/tests/system-test/out4.class
+annotation-file-utilities/tests/system-test/out5.diff
+annotation-file-utilities/tests/system-test/out5.jaif
 
 asmx/output
 
