Export environment variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,8 @@ script:
      javac -version &&
      export TRAVIS_REPO_SLUG=$TRAVIS_REPO_SLUG &&
      export TRAVIS_BUILD_DIR=$TRAVIS_BUILD_DIR &&
+     export TRAVIS_PULL_REQUEST_BRANCH=${TRAVIS_PULL_REQUEST_BRANCH} &&
+     export TRAVIS_BRANCH=${TRAVIS_BRANCH} &&
      ./.travis-build.sh $GROUP"
 
 jobs:
