--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ jobs:
 
             curl -LO --retry 3 https://raw.github.com/plume-lib/trigger-travis/master/trigger-travis.sh
 
-            git ls-remote https://github.com/${SLUGOWNER}/checker-framework.git &>-
+            git ls-remote https://github.com/${SLUGOWNER}/checker-framework.git &>/dev/null
             if [ "$?" -eq 0 ]; then
               sh trigger-travis.sh ${SLUGOWNER} checker-framework $TRAVIS_ACCESS_TOKEN
             fi
