--- a/annotation-file-utilities/tests/enum-imports/Makefile
+++ b/annotation-file-utilities/tests/enum-imports/Makefile
@@ -24,7 +24,7 @@ DIFFS := $(wildcard *.goal)
 DISABLED := $(shell grep -le "@skip-test" $(DIFFS))
 FILTERED := $(filter-out $(DISABLED),$(DIFFS))
 DIFFS := $(patsubst %.goal, %.diff, $(FILTERED))
-AFU_JARS := ../../lib/bcel-util-1.0.0.jar ../../lib/options-1.0.0.jar ../../lib/plume-util-1.0.0.jar ../../lib/plume-util-1.0.0.jar ../../annotation-file-utilities.jar
+AFU_JARS := ../../annotation-file-utilities.jar
 JAIF := C.jaif
 SRC := $(patsubst %.goal, %.java, $(FILTERED))
 OUT := $(patsubst %.goal, %.output, $(FILTERED))
