--- a/annotation-file-utilities/tests/issue155/Makefile
+++ b/annotation-file-utilities/tests/issue155/Makefile
@@ -52,7 +52,7 @@ results: ../bin/VerifyDiffs.class
 
 # Actually runs the annotator to create the annotated java file.
 .PRECIOUS: %.output
-%.output: %.jaif %.java ../../lib/bcel-util-1.0.0.jar  ../../lib/options-1.0.0.jar ../../lib/plume-util-1.0.0.jar ../../bin ../../annotation-file-utilities.jar
+%.output: %.jaif %.java ../../bin ../../annotation-file-utilities.jar
 	$(JAVA) \
 	-cp ../../bin:../bin:../../annotation-file-utilities.jar:bin \
 	annotator.Main \
