--- a/annotation-file-utilities/.classpath
+++ b/annotation-file-utilities/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry kind="lib" path="lib/bcel-util-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/options-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/plume-util-1.0.0.jar"/>
-        <classpathentry kind="lib" path="../../checker-framework/checker/dist/checker-qual.jar"/>
+	<classpathentry kind="lib" path="lib/checker-qual-2.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
