--- a/scene-lib/.classpath
+++ b/scene-lib/.classpath
@@ -10,5 +10,5 @@
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/options-1.0.0.jar"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/plume-util-1.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
-        <classpathentry kind="../../checker-framework/checker/dist/checker-qual.jar"/>
+	<classpathentry kind="lib" path="/annotation-file-utilities/lib/checker-qual-2.5.4.jar"/>
 </classpath>
