--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -84,11 +84,14 @@
       <pathelement location="${annotations-compiler}/bin"/>
       -->
       <pathelement location="${annotations-compiler}/dist/lib/javac.jar"/>
-      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/options-all-0.3.1.jar"/>
-      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/plume-util-0.0.1.jar"/>
+      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/bcel-util-1.0.0.jar"/>
+      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/options-1.0.0.jar"/>
+      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/plume-util-1.0.1.jar"/>
       <pathelement location="${annotation-tools}/annotation-file-utilities/lib/guava-20.0.jar"/>
       <pathelement location="${scene-lib}/bin"/>
       <pathelement location="${asmx}/bin"/>
+      <!-- Checker Framework qualifiers should not go in generated .jar files -->
+      <pathelement location="${annotation-tools}/annotation-file-utilities/lib/checker-qual-2.5.4.jar"/>
       <!-- needed for optionsdoc target -->
       <pathelement location="bin"/>
       <!-- additional for distribution:
@@ -158,8 +161,9 @@
         <srcfiles dir="${scene-lib}/bin" excludes="annotations-expected/**,annotations/tests/**"/>
       </uptodate>
       <uptodate property="annotations-compiler.uptodate" targetfile="annotation-file-utilities.jar" srcfile="${annotations-compiler}/dist/lib/javac.jar"/>
-      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/options-all-0.3.1.jar"/>
-      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/plume-util-0.0.1.jar"/>
+      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/bcel-util-1.0.0.jar"/>
+      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/options-1.0.0.jar"/>
+      <uptodate property="plume.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/plume-util-1.0.1.jar"/>
       <uptodate property="google-collect.uptodate" targetfile="annotation-file-utilities.jar" srcfile="lib/guava-20.0.jar"/>
 
       <condition property="jarfile.uptodate">
@@ -199,16 +203,24 @@
       <fileset dir="${scene-lib}/bin" excludes="annotations-expected/**,annotations/tests/**"/>
     </copy>
     <!-- Also need to get class files in libraries -->
-    <unjar src="lib/options-all-0.3.1.jar" dest="${temp-jarfile}">
+    <unjar src="lib/bcel-util-1.0.0.jar" dest="${temp-jarfile}">
       <patternset>
         <include name="**/*.class"/>
         <exclude name="META-INF/" />
       </patternset>
     </unjar>
-    <unjar src="lib/plume-util-0.0.1.jar" dest="${temp-jarfile}">
+    <unjar src="lib/options-1.0.0.jar" dest="${temp-jarfile}">
       <patternset>
         <include name="**/*.class"/>
         <exclude name="META-INF/" />
+      </patternset>
+    </unjar>
+    <unjar src="lib/plume-util-1.0.1.jar" dest="${temp-jarfile}">
+      <patternset>
+        <include name="**/*.class"/>
+        <exclude name="META-INF/" />
+        <!-- As af plume-util-1.0.1, this file is malformed (at least according to ASM?).  I'm not sure why. -->
+        <exclude name="**/OrderedPairIterator.class" />
       </patternset>
     </unjar>
     <unjar src="lib/guava-20.0.jar" dest="${temp-jarfile}">
