--- a/asmx/build.xml
+++ b/asmx/build.xml
@@ -124,7 +124,7 @@
 
   <target name="compile-debug" depends="init">
     <mkdir dir="${out.tmp}"/>
-    <javac destdir="${out.tmp}" debug="on" includeantruntime="false">
+    <javac destdir="${out.tmp}" debug="on" includeantruntime="false" source="8" target="8">
       <classpath>
         <pathelement location="${out.tmp}"/>
         <pathelement path="${env.JAVA_HOME}/lib/tools.jar"/>
