Create both fat and skinny .jar files

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ annotation-file-utilities/annotation-file-format.pdf
 annotation-file-utilities/annotation-file-format.ps
 annotation-file-utilities/annotation-file-format.toc
 annotation-file-utilities/annotation-file-utilities.jar
+annotation-file-utilities/annotation-file-utilities-all.jar
 annotation-file-utilities/annotation-tools.zip
 annotation-file-utilities/design.aux
 annotation-file-utilities/design.log
