Change more uses of annotation-file-utilities.jar

--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -517,6 +517,7 @@
     <delete dir="${temp-annotation-file-utilities}"/>
 
     <!-- <echo message="Deleting previous distribution:  annotation-file-utilities.{jar,zip}"/> -->
+    <delete file="annotation-file-utilities-all.jar"/>
     <delete file="annotation-file-utilities.jar"/>
     <delete file="annotation-tools.zip"/>
   </target>
