Changes from code review

--- a/annotation-file-utilities/tests/Makefile
+++ b/annotation-file-utilities/tests/Makefile
@@ -15,7 +15,6 @@
 #   JAVAC=${JAVA_HOME}/bin/javac
 export JAVA?=java -ea
 export JAVAC?=javac
-export XJAVAC?=javac
 
 export SHELL=/bin/bash -o pipefail
 
@@ -73,14 +72,14 @@ bin/VerifyDiffs.class : VerifyDiffs.java
 # Compiles all the test cases (be verbose about this).
 compile :
 	mkdir -p bin
-	$(XJAVAC) -g -cp ../bin -d bin *.java
+	$(JAVAC) -g -cp ../bin -d bin *.java
 
 .PRECIOUS : bin/annotator/tests/%.class
 bin/annotator/tests/%.class: %.java
 	mkdir -p bin
 # Added "-Xlint:-options" to see if it permits Jenkins job to succeed, due to
 # problem "target value 1.8 is obsolete and will be removed in a future release"
-	$(XJAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities-all.jar -d bin -sourcepath . $*.java
+	$(JAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities-all.jar -d bin -sourcepath . $*.java
 
 # Actually runs the annotator to create the annotated java file.
 .PRECIOUS: %.output
