--- a/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
+++ b/annotation-file-utilities/tests/ad-hoc/bridge/Makefile
@@ -23,7 +23,7 @@ no-bridge: C.class
 	test 2 -eq `grep -c -w '@A' C.jaif` || (echo "Didn't find 2 '@A' in C.jaif:" && cat C.jaif && false)
 
 C.class: C.java
-	$(XJAVAC) -g $(JAVACTARGET) C.java
+	$(JAVAC) -g $(JAVACTARGET) C.java
 
 .PHONY: clean
 clean:
