--- a/asmx/build.xml
+++ b/asmx/build.xml
@@ -33,6 +33,7 @@
   <!-- ==================================== -->
   <!-- ======== PROPERTY DEFINITION ======= -->
   <!-- ==================================== -->
+  <property environment="env"/>
 
   <property file="${user.home}/asm-build.properties"/>
   <property file="build.config"/>
@@ -123,10 +124,10 @@
 
   <target name="compile-debug" depends="init">
     <mkdir dir="${out.tmp}"/>
-    <javac destdir="${out.tmp}" debug="on" includeantruntime="false">
+    <javac destdir="${out.tmp}" debug="on" includeantruntime="false" source="8" target="8">
       <classpath>
         <pathelement location="${out.tmp}"/>
-        <pathelement path="${annotations-compiler}/dist/lib/javac.jar"/>
+        <pathelement location="${annotation-tools}/annotation-file-utilities/lib/compiler-2.4.0.jar"/>
       </classpath>
       <src path="${src}"/>
       <include name="**/*.java"/>
