--- a/annotation-file-utilities/tests/converted/Makefile
+++ b/annotation-file-utilities/tests/converted/Makefile
@@ -1,6 +1,7 @@
 # Very rough testing framework for the annotator.  Running 'make all' will
-# look for all myClass.goal files in this directory, run the annotator on the
-# corresponding .jaif and .java files, and then output the difference in a
+# look for all myClass.goal files in the parent directory, run the annotator on the
+# corresponding .jaif in this directory and the .java file in the parent directory,
+# and then output the difference in a
 # myClass.diff file in this directory.
 #
 # To test just one file, use (for example) 'make myClass.diff'.
@@ -15,14 +16,17 @@
 #   JAVAC=${JAVA_HOME}/bin/javac
 export JAVA?=java -ea
 export JAVAC?=javac
+export XJAVAC?=javac
 
 export SHELL=/bin/bash -o pipefail
 
 
-DIFFS := $(sort $(wildcard *.goal))
+# Use .jaif instead of .goal (which ../Makefile uses), because only
+# .jaif files are checked in this directory.
+DIFFS := $(sort $(wildcard *.jaif))
 DISABLED := $(shell grep -le "@skip-test" $(DIFFS))
 FILTERED := $(filter-out $(DISABLED),$(DIFFS))
-DIFFS := $(patsubst %.goal, %.diff, $(FILTERED))
+DIFFS := $(patsubst %.jaif, %.diff, $(FILTERED))
 
 DEBUG :=
 # Use this to enable some debugging.
@@ -31,74 +35,61 @@ DEBUG :=
 default : all
 
 .PHONY: all
-all : $(DIFFS) abbreviated converted enum-imports ad-hoc issue155 system-test source-extension results
-
-.PHONY: abbreviated
-abbreviated:
-	${MAKE} -C abbreviated
-
-.PHONY: converted
-converted:
-	${MAKE} -C converted
-
-.PHONY: enum-imports
-enum-imports:
-	${MAKE} -C enum-imports
-
-.PHONY: ad-hoc
-ad-hoc:
-	${MAKE} -C ad-hoc
-
-.PHONY: issue155
-issue155:
-	${MAKE} -C issue155
-
-.PHONY: source-extension
-source-extension:
-	${MAKE} -C source-extension
-
-.PHONY: system-test
-system-test:
-	${MAKE} -C system-test
+all : $(DIFFS) results
 
 # Display results of all .diff files.
 .PHONY: results
-results: bin/VerifyDiffs.class
+results: ../bin/VerifyDiffs.class
 	@echo ""
 	@echo "=== RESULTS ==="
 	@echo ""
-	@$(JAVA) -cp bin VerifyDiffs --show_all
+	@$(JAVA) -cp ../bin VerifyDiffs --show_all
 
 # Remakes the little Java program that checks and compares diffs.
-bin/VerifyDiffs.class : VerifyDiffs.java
-	@$(JAVAC) -g -cp ../bincompile -d bin VerifyDiffs.java
+../bin/VerifyDiffs.class : ../VerifyDiffs.java
+	@$(JAVAC) -g -cp ../../bincompile -d ../bin ../VerifyDiffs.java
 
 # Compiles all the test cases (be verbose about this).
 compile :
 	mkdir -p bin
-	$(JAVAC) -g -cp ../bin -d bin *.java
+	$(XJAVAC) -g -cp ../../bin -d bin ../*.java
 
 .PRECIOUS : bin/annotator/tests/%.class
 bin/annotator/tests/%.class: %.java
 	mkdir -p bin
 # Added "-Xlint:-options" to see if it permits Jenkins job to succeed, due to
 # problem "target value 1.8 is obsolete and will be removed in a future release"
-	$(JAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities-all.jar -d bin -sourcepath . $*.java
+	$(XJAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities.jar -d bin -sourcepath . $*.java
+
+# Create a symbolic link for a .java file.
+.PRECIOUS: %.java
+%.java:
+	- rm $*.java
+	ln -s ../$*.java $*.java
+
+# Create a symbolic link for a .goal file.
+.PRECIOUS: %.goal
+%.goal:
+	- rm $*.goal
+	ln -s ../$*.goal $*.goal
 
 # Actually runs the annotator to create the annotated java file.
 .PRECIOUS: %.output
-%.output: %.jaif %.java bin/annotator/tests/%.class ../bin ../annotation-file-utilities-all.jar
-	$(JAVA) \
-	-cp ../bin:../annotation-file-utilities-all.jar:bin \
-	annotator.Main \
-	${DEBUG} \
-	--abbreviate=false \
-	-d $*-output \
-	$*.jaif \
-	$*.java \
-	2>&1 | tee $*.log
-	find "$*-output" -name '*.java' -print | xargs cat > "$*.output"
-	rm -rf $*-output
+# TODO: added `-` to these commands to proceed past failures
+# The failures will still show up in the summary, but it might
+# be better to fail earlier.
+%.output: %.jaif %.java bin/annotator/tests/%.class
+	-$(JAVA) \
+	    -cp ../../bin:../../annotation-file-utilities.jar:bin \
+	    annotator.Main \
+	    ${DEBUG} \
+	    --abbreviate=false \
+	    -d $*-output \
+	    $*.jaif \
+	    $*.java \
+	    2>&1 | tee $*.log
+	-find "$*-output" -name '*.java' -print | xargs cat > "$*.output"
+	-rm -rf $*-output
 
 # Compare the output of the annotator and the goal file.
 %.diff: %.goal %.output
@@ -111,8 +102,5 @@ clean :
 	rm -f *.diff
 	rm -f *.log
 	rm -f *.output
-	(cd abbreviated && make clean)
-	(cd converted && make clean)
-	(cd enum-imports && make clean)
-	(cd ad-hoc && make clean)
-	(cd issue155 && make clean)
+	rm -f *.java
+	rm -f *.goal
