Adapt to ../Makefile changes.

--- a/annotation-file-utilities/tests/converted/Makefile
+++ b/annotation-file-utilities/tests/converted/Makefile
@@ -16,7 +16,6 @@
 #   JAVAC=${JAVA_HOME}/bin/javac
 export JAVA?=java -ea
 export JAVAC?=javac
-export XJAVAC?=javac
 
 export SHELL=/bin/bash -o pipefail
 
@@ -52,14 +51,14 @@ results: ../bin/VerifyDiffs.class
 # Compiles all the test cases (be verbose about this).
 compile :
 	mkdir -p bin
-	$(XJAVAC) -g -cp ../../bin -d bin ../*.java
+	$(JAVAC) -g -cp ../../bin -d bin ../*.java
 
 .PRECIOUS : bin/annotator/tests/%.class
 bin/annotator/tests/%.class: %.java
 	mkdir -p bin
 # Added "-Xlint:-options" to see if it permits Jenkins job to succeed, due to
 # problem "target value 1.8 is obsolete and will be removed in a future release"
-	$(XJAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities.jar -d bin -sourcepath . $*.java
+	$(JAVAC) -Xlint:-options -g -cp bin:../annotation-file-utilities.jar -d bin -sourcepath . $*.java
 
 # Create a symbolic link for a .java file.
 .PRECIOUS: %.java
@@ -78,9 +77,9 @@ bin/annotator/tests/%.class: %.java
 # TODO: added `-` to these commands to proceed past failures
 # The failures will still show up in the summary, but it might
 # be better to fail earlier.
-%.output: %.jaif %.java bin/annotator/tests/%.class
+%.output: %.jaif %.java bin/annotator/tests/%.class ../../bin ../../annotation-file-utilities-all.jar
 	-$(JAVA) \
-	    -cp ../../bin:../../annotation-file-utilities.jar:bin \
+	    -cp ../../bin:../../annotation-file-utilities-all.jar:bin \
 	    annotator.Main \
 	    ${DEBUG} \
 	    --abbreviate=false \
