--- a/asmx/.classpath
+++ b/asmx/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="config/ow_util_ant_tasks.jar"/>
+	<classpathentry kind="src" path="/jsr308-langtools"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="config/ow_util_ant_tasks.jar"/>
+	<classpathentry kind="output" path="output/build"/>
 </classpath>
