--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,10 @@ annotation-file-utilities/tests/system-test/out4.class
 annotation-file-utilities/tests/system-test/out5.diff
 annotation-file-utilities/tests/system-test/out5.jaif
 
+# ignore symbolic link to JRE/lib/tools.jar and JRE/src.zip
+annotation-file-utilities/lib/tools.jar
+annotation-file-utilities/lib/src.zip
+
 asmx/output
 
 scene-lib/javadoc
