--- a/annotation-file-utilities/.classpath
+++ b/annotation-file-utilities/.classpath
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="/asmx"/>
+	<classpathentry kind="src" path="/scene-lib"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/asmx"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/scene-lib"/>
-	<classpathentry kind="lib" path="lib/guava-20.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/guava-20.0.jar"/>
 	<classpathentry kind="lib" path="lib/bcel-util-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/options-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/plume-util-1.0.1.jar"/>
