--- a/annotation-file-utilities/tests/abbreviated/Makefile
+++ b/annotation-file-utilities/tests/abbreviated/Makefile
@@ -74,7 +74,7 @@ output: compile $(JAIF) ../../bin $(AFU_JARS)
 
 # Compare the output of the annotator and the goal file.
 %.diff: %.goal %.output
-	-diff -u $*.goal $*.output >& $*.diff
+	-diff -u $*.goal $*.output 2>&1 | tee $*.diff
 
 # Remove all .diff, .log files from the tests directory.
 .PHONY: clean
