--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
   <property environment="env"/>
 
   <!-- default location of projects, has effect only if not previously set -->
-  <property name="asmx" location="asmx"/>
+  <!--<property name="asmx" location="asmx"/>-->
   <property name="scene-lib" location="scene-lib"/>
   <property name="afu" location="annotation-file-utilities"/>
 
@@ -35,17 +35,17 @@
 
   <target name="clean" depends="clean-all"/>
 
-  <target name="compile-asmx">
-      <ant dir="${asmx}" target="compile">
-	  <property name="product.noshrink" value="true"/>
-      </ant>
-  </target>
+  <!--<target name="compile-asmx">-->
+      <!--<ant dir="${asmx}" target="compile">-->
+	  <!--<property name="product.noshrink" value="true"/>-->
+      <!--</ant>-->
+  <!--</target>-->
 
   <!-- TODO: Get this working -->
   <!-- Known to fail -->
-  <target name="test-asmx">
-      <ant dir="${asmx}" target="test"/>
-  </target>
+  <!--<target name="test-asmx">-->
+      <!--<ant dir="${asmx}" target="test"/>-->
+  <!--</target>-->
 
   <target name="compile-scene-lib">
       <ant dir="${scene-lib}" target="bin"/>
@@ -72,12 +72,12 @@
   </target>
 
   <target name="compile-all"
-	 depends="compile-asmx,compile-scene-lib,compile-afu"/>
+	 depends="compile-scene-lib,compile-afu"/>
   <!-- TODO: Add asmx tests when they work -->
   <target name="test-all"
 	 depends="test-scene-lib,test-afu"/>
   <target name="clean-all">
-    <ant dir="${asmx}" target="clean"/>
+    <!--<ant dir="${asmx}" target="clean"/>-->
     <ant dir="${scene-lib}" target="clean"/>
     <ant dir="${afu}" target="clean"/>
   </target>
