--- a/scene-lib/.classpath
+++ b/scene-lib/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/asmx"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/annotation-file-utilities/lib/asm-7.0.jar"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/bcel-util-1.0.0.jar"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/checker-qual-2.5.4.jar"/>
 	<classpathentry kind="lib" path="/annotation-file-utilities/lib/guava-20.0.jar"/>
