Different way not to assume location of annotation-tools clone

--- a/global.build.properties
+++ b/global.build.properties
@@ -12,7 +12,7 @@
 # starting with ${basedir}); in that case, this definition has no effect.
 workspace : ..
 
-annotation-tools : .
+annotation-tools : ${workspace}/annotation-tools
 afu : ${annotation-tools}/annotation-file-utilities
 asmx : ${annotation-tools}/asmx
 scene-lib : ${annotation-tools}/scene-lib
