--- a/annotation-file-utilities/build.properties
+++ b/annotation-file-utilities/build.properties
@@ -1,4 +1,6 @@
 workspace : ${basedir}/../..
+# Don't let global.build.properties default the annotation-tools directory.
+annotation-tools: ${basedir}/..
 global.build.properties : ${basedir}/../global.build.properties
 user.build.properties : ${basedir}/../user.build.properties
 afu.ver.0=<!-- afu-version -->
