--- a/build.xml
+++ b/build.xml
@@ -107,7 +107,7 @@
   <target name="html-validate"
 	  description="Validate that HTML files are well-formed; only works with JDK 8"
 	  depends="prep">
-    <exec executable="html5validator">
+    <exec executable="html5validator" failonerror="true">
       <arg value="--ignore"/>
       <arg value="/api/"/>
       <arg value="/build/"/>
