--- a/annotation-file-utilities/build.xml
+++ b/annotation-file-utilities/build.xml
@@ -579,8 +579,27 @@
            fork="yes"
            executable="${cfjavac}">
       <compilerarg value="-version"/>
-      <compilerarg line="-target 5"/>
-      <compilerarg line="-processor org.checkerframework.checker.nonnull.NonNullFbcChecker"/>
+      <compilerarg line="-target 8"/>
+      <compilerarg line="-processor org.checkerframework.checker.nullness.NullnessChecker"/>
+      <compilerarg value="-implicit:class"/>
+      <compilerarg line="-Awarns -Xmaxwarns 10000"/>
+      <classpath>
+        <path refid="libpath"/>
+        <pathelement location="${env.annotations}/checker/dist/checker.jar"/>
+      </classpath>
+    </javac>
+  </target>
+
+  <target name="check-signature"
+          description="Check for signature errors."
+          depends="init,clean,init-cfjavac-unix,init-cfjavac-windows">
+    <mkdir dir="bin"/>
+    <javac srcdir="src" destdir="bin" debug="true" encoding="8859_1"
+           fork="yes"
+           executable="${cfjavac}">
+      <compilerarg value="-version"/>
+      <compilerarg line="-target 8"/>
+      <compilerarg line="-processor org.checkerframework.checker.signature.SignatureChecker"/>
       <compilerarg value="-implicit:class"/>
       <compilerarg line="-Awarns -Xmaxwarns 10000"/>
       <classpath>
